--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <a target="_blank" href="https://www.linkedin.com/in/atanas-korabov/">Linkedin: @atanas-korabov</a>
                         <br>
                         <h3>Read some of my interesting stuff</h3>
-                        <a target="_blank" href="https://a-kbv/github.io/">Portfolio</a>
+                        <a target="_blank" href="https://a-kbv.github.io/">Portfolio</a>
                         <br>
                       
                     </div>
