--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         <h3>Find me</h3>
                         <a target="_blank" href="https://github.com/a-kbv">Github: @a-kbv</a>
                         <br>
-                        <a target="_blank" href="https://www.linkedin.com/in/atanas-korabov/">Linkedin: @atanas-korabov</a>
+                        <a target="_blank" href="https://stackoverflow.com/users/14730955/a-kor">Stack Overflow: @a-kor</a>
                         <br>
                         <h3>Read some of my interesting stuff</h3>
                         <a target="_blank" href="https://a-kbv.github.io/">Portfolio</a>
