--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                     <p>Forward and up, moving fast trough time </p>
                     <div id="skills">
                         <ul>
+                            <li>Python</li>
                             <li>Javascript</li>
                             <li>PHP</li>
                             <li>WordPress</li>
