--- a/index.html
+++ b/index.html
@@ -62,8 +62,13 @@
                 <div class="about-wrapper">
                     <div class="about-me">
                         <h4>More about me</h4>
-                        <p>I love to build new projects to tickle my brain and love to solve problems.</p>
-                        <p>I am an individual who is always ready to work on new technologies,  I am Python lover.</p>
+                        
+                        <p>I'm self taught Programmer with passion for solving 
+                            problems striving to make the world a more unified 
+                            and connected place. A creative thinker, adept in 
+                            software development and working with various data
+                             structures who is always ready to work on new 
+                             technologies.</p>
                     <hr>
                     <h4>TOP EXPERTISE</h4>
                     <p>Forward and up, moving fast trough time </p>
