--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1" />
         <link href="https://fonts.googleapis.com/css2?family=Russo+One&amp;display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&amp;family=Russo+One&amp;display=swap" rel="stylesheet">
+        <!-- responsive -->
         <link rel="stylesheet" href="assets/css/fonts/font-awesome.min.css">
+        <!-- stylesheet -->
         <link rel="stylesheet" type="text/css" href="assets/css/default.css">
         <link id="theme-style" rel="stylesheet" type="text/css" href="#">
     </head>
     <body>
+        <!--Main-Menu Area Start-->
         <section class="s1">
             <div class="main-container">
                 <div class="greeting-wrapper">
@@ -58,6 +61,35 @@
                 </div>
             </div>
         </section>
+        <!--Main-Menu Area End-->
+
+        <!-- Hero Area Start 
+
+	<div class="hero-area default" id="hero-are">
+		<div id="particles-js"></div>
+			<div class="item center" style="background-image: url(assets/images/codder.png);">
+				<div class="overlay"></div>
+				<div class="container">
+					<div class="row">
+						<div class="col-lg-12 align-self-center" style="z-index: 100;">
+							<div class="content">
+								<h1 class="title">
+									Code with Passion
+								</h1>
+								<p class="text">
+                                    Видео уроци, книги, семинари и съвети за програмиране
+								</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+    </div>
+    
+     Hero Area End -->
+
+        <!--About Me Area Start-->
         <section class="s2">
             <div class="main-container">
                 <div class="about-wrapper">
@@ -102,6 +134,9 @@
                 </div>
             </div>
         </section>
+        <!--About Me Area End-->
+
+        <!--Projects Area Start-->
         <section class="s3">
             <div class="main-container">
                 <h3 style="text-align: center;">Some of my open source contributions</h3>
@@ -136,6 +171,9 @@
                 </div>
             </div>
         </section>
+        <!--Projects Area End-->
+
+        <!--Contacts Area Start-->
         <section class="s4">
             <div class="main-container">
                 <h3 style="text-align: center;">Get In Touch</h3>
@@ -152,6 +190,8 @@
                 </form>
             </div>
         </section>
+
+        <!--Contacts Area End-->
         <script type="text/javascript" src="assets/js/script.js"></script>
     </body>
 
